Fixed more spelling errors, fixed code going off screen

--- a/public/resources/style.css
+++ b/public/resources/style.css
@@ -26,6 +26,7 @@ pre code {
 
 code {
   padding: 0 4px;
+  white-space: pre-wrap;
 }
 
 pre {
